--- a/www/NodeAPI/package.json
+++ b/www/NodeAPI/package.json
@@ -22,7 +22,8 @@
     "passport-http": "^0.2.x",
     "passport-http-bearer": "^1.0.x",
     "passport-oauth2-client-password": "^0.1.x",
-    "winston": "^0.8.x"
+    "winston": "^0.8.x",
+    "open-graph-scraper": "^3.1.3"
   },
   "jshintConfig": {
     "curly": true,
