--- a/www/NodeAPI/config.json
+++ b/www/NodeAPI/config.json
@@ -14,6 +14,10 @@
             "username": "myapi",
             "password": "abc1234"
         },
+        "admin": {
+            "username": "poet",
+            "password": "niiip"
+        },
         "client": {
             "name": "Android API v1",
             "clientId": "android",
