--- a/www/NodeAPI/package.json
+++ b/www/NodeAPI/package.json
@@ -23,7 +23,12 @@
     "passport-http-bearer": "^1.0.x",
     "passport-oauth2-client-password": "^0.1.x",
     "winston": "^0.8.x",
-    "open-graph-scraper": "^3.1.3"
+    "open-graph-scraper": "^3.1.3",
+    "slick-carousel": "^1.8.1",
+    "angular-slick-carousel": "^3.1.7",
+    "angular-route": "^1.6.7"
+
+
   },
   "jshintConfig": {
     "curly": true,
