--- a/www/NodeAPI/package.json
+++ b/www/NodeAPI/package.json
@@ -26,7 +26,8 @@
     "open-graph-scraper": "^3.1.3",
     "slick-carousel": "^1.8.1",
     "angular-slick-carousel": "^3.1.7",
-    "angular-route": "^1.6.7"
+    "angular-route": "^1.6.7",
+    "jquery": "^3.2.1"
 
 
   },
